--- a/index.html
+++ b/index.html
@@ -8,7 +8,29 @@
 </head>
 
 <body>
+  <header class="header">
+    <h1 class="title">RS Lang</h1>
+    <div class="auth">
+      <button class="auth__button log-in" title="Log into an existing account">Log In</button>
+      <button class="auth__button sing-up" title="Create a new account">Sing Up</button>
+    </div>
+  </header>
+  <main class="main">
+    <form class="form">
+      <input id="email" type="email" placeholder="E-mail (Required)" required autofocus>
+      <input id="password" type="password" placeholder="Password (Required)" required autocomplete="on">
+    </form>
 
+  </main>
+
+  <footer class="footer">
+    <div class="contacts">
+      <a class="link" href="https://telegram.me/zzVIPz" target="_blank">
+        <img src="./src/assets/svg/social-media.svg" alt="Telegram" />
+        Team-36
+      </a>
+    </div>
+  </footer>
 </body>
 
 </html>
