--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     <div class="wrapper">
       <div class="logo"></div>
       <div class="auth">
-        <button class="auth__button log-in" title="Log into an existing account">Log In</button>
-        <button class="auth__button sing-up" title="Create a new account">Sing Up</button>
+        <button class="auth__button log-out">Log out</button>
       </div>
     </div>
 
