--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
 <body>
   <header class="header">
     <div class="wrapper">
-      <div class="logo"></div>
+      <a class="link" href="./pages/promo.html">
+        <div class="logo"></div>
+      </a>
       <div class="auth">
         <button class="auth__button log-out">Log out</button>
       </div>
     </div>
-
   </header>
+
   <main class="main">
     <div class="title__wrapper">
       <h1 class="title">RS<span>Lang</span></h1>
@@ -27,18 +29,21 @@
       <input id="email" type="email" placeholder="E-mail (Required)" required autofocus>
       <div class="email-error-message">Please, enter valid email - "example@mail.com"</div>
       <input id="password" type="password" placeholder="Password (Required)" required autocomplete="on">
-      <div class="password-error-message">Your password should be at least 6 characters</div>
+      <div class="password-error-message">The password must contain at least 8 characters, consist of a lowercase
+        letter, a capital letter, a number and a special character.</div>
       <input class="form__button" type="button" value="Log In">
       <p class="form__login-message">Don't have an account?<span class="form__login-selection">Sign up</span></p>
     </form>
-
   </main>
+
   <footer class="footer">
-    <div class="contacts">
-      <a class="link" href="https://telegram.me/zzVIPz" target="_blank">
-        <img src="./src/assets/svg/social-media.svg" alt="Telegram" />
-        Team-36
-      </a>
+    <div class="wrapper">
+      <div class="contacts">
+        <a class="link" href="./pages/about.html">
+          <img src="./src/assets/svg/social-media.svg" alt="Telegram" />
+          Team-36
+        </a>
+      </div>
     </div>
   </footer>
 </body>
