refactor: change structure of the project with MVC

--- a/src/pages/main.html
+++ b/src/pages/main.html
@@ -10,14 +10,13 @@
 <body>
   <header class="header">
     <div class="wrapper">
-
     </div>
   </header>
   <main class="main">
   </main>
   <footer class="footer">
     <div class="auth">
-      <button class="auth__button log-out">Log out</button>
+      <button class="auth__button log-out">Log Out</button>
     </div>
   </footer>
 </body>
