fead: add keyboard game and mockdata

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       </a>
     </div>
   </header>
+  <button class="button-draw-game">Draw game</button>
   <main class="main">
     <div class="title__wrapper">
       <h1 class="title">RS<span>Lang</span></h1>
