feat: add savannah-game start page

--- a/src/pages/main.html
+++ b/src/pages/main.html
@@ -10,6 +10,8 @@
 <body>
   <header class="header">
     <div class="wrapper">
+      <!-- Delete this btn before merge -->
+      <button class="savannah-game">Savannah</button>
     </div>
   </header>
   <main class="main">
