feat: add navigation menu

--- a/src/pages/main.html
+++ b/src/pages/main.html
@@ -9,8 +9,15 @@
 
 <body>
   <header class="header">
-    <div class="wrapper">
+    <div class="burger-menu">
+      <span class="burger-menu__line"></span>
+      <span class="burger-menu__line"></span>
+      <span class="burger-menu__line"></span>
     </div>
+    <h1 class="header__title"></h1>
+    <nav class="header__navigation">
+      <ul class="navigation"></ul>
+    </nav>
   </header>
   <main class="main">
   </main>
