initial: start audiocall-game

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
       </a>
     </div>
   </header>
+   <!-- Delete this btn before merge -->
+   <button class="audiocall-game">Audiocall</button>
   <main class="main">
     <div class="title__wrapper">
       <h1 class="title">RS<span>Lang</span></h1>
