--- a/src/js/games/speak_it/index.html
+++ b/src/js/games/speak_it/index.html
@@ -9,8 +9,10 @@
 </head>
 <body>
     <header>This is header</header>
-    <div class="container"></div>
+    <div class="container">
+        <div class="gogogo">GOGOGO</div>
+    </div>
     <footer>This is footer</footer>
-     <script src="./js/all.js"></script>
+     <script type="module" src="./js/all.js"></script>
 </body>
 </html>
