feat: add play audio

--- a/src/pages/main.html
+++ b/src/pages/main.html
@@ -20,7 +20,7 @@
       <ul class="navigation"></ul>
     </nav>
     <div class="user-tool">
-      <button class="user-tool__button-speaker icon"></button>
+      <button class="user-tool__button-speaker icon user-tool__button-speaker--active"></button>
       <button class="user-tool__button-settings icon"></button>
       <button class="user-tool__button-log-out icon"></button>
     </div>
