--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -11,7 +11,9 @@
   <header class="header">
   </header>
   <main class="main">
+    <div class="about-container"></div>
 
+    </div>
 
 
   </main>
