feat: add base layout

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -4,17 +4,158 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>about team</title>
 </head>
 
 <body>
   <header class="header">
   </header>
   <main class="main">
-    <div class="about-container"></div>
+    <section class="about-us">
+      <h2 class="about-us__header">About Us</h2>
+      <p class="about-us__text">
+        Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum.
+        Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget
+        lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo,
+        tortor mauris condimentum nibh.
+      </p>
+      <div class="about-us__cards-block">
+        <div class="person">
+          <div class="person__photo">
+            <img
+              src="https://avatars0.githubusercontent.com/u/53048981?s=400&u=129e1991f4c44171eb9e841a2f733af2f36510f4&v=4"
+              alt="Vladislav Maltsev photo">
+          </div>
+          <div class="person-description">
+            <div class="description">
+              <h3 class="description__header">Vladislav Maltsev</h3>
+              <p class="description__text">
+                nordost88 ----Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum tellus
+                dolor id
+                lorem.
+              </p>
+            </div>
+          </div>
+          <div class="social social_about">
+            <a href="https://github.com/NordOst88" class="social__item github"></a>
+            <a href="#" class="social__item google"></a>
+            <a href="#" class="social__item twitter"></a>
+            <a href="#" class="social__item linkedin"></a>
+          </div>
+        </div>
+        <div class="person">
+          <div class="person__photo">
+            <img
+              src="https://avatars1.githubusercontent.com/u/60438490?s=400&u=a7784a14339972e88dbea6fd77c49193cbd4a112&v=4"
+              alt="Anastasiya Sych photo">
+          </div>
+          <div class="person-description">
+            <div class="description">
+              <h3 class="description__header">Anastasiya Sych</h3>
+              <p class="description__text">
+                staceysych ---- Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus
+                ut,
+                ultrices velit.
+              </p>
+            </div>
+          </div>
+          <div class="social social_about">
+            <a href="https://github.com/staceysych" class="social__item github"></a>
+            <a href="#" class="social__item google"></a>
+            <a href="#" class="social__item twitter"></a>
+            <a href="#" class="social__item linkedin"></a>
+          </div>
+        </div>
+        <div class="person">
+          <div class="person__photo">
+            <img src="https://avatars1.githubusercontent.com/u/43119686?s=400&v=4" alt="Siarhei Tsialeha photo">
+          </div>
+          <div class="person-description">
+            <div class="description">
+              <h3 class="description__header">Siarhei Tsialeha</h3>
+              <p class="description__text">
+                zzvipz ----Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis.
+                Quisque condimentum.
+              </p>
+            </div>
+          </div>
+          <div class="social social_about">
+            <a href="https://github.com/zzvipz" class="social__item github"></a>
+            <a href="#" class="social__item google"></a>
+            <a href="#" class="social__item twitter"></a>
+            <a href="#" class="social__item linkedin"></a>
+          </div>
+        </div>
+        <div class="person">
+          <div class="person__photo">
+            <img
+              src="https://avatars3.githubusercontent.com/u/33913952?s=400&u=b70903813447a13475ceb645b96c27b841caafc4&v=4"
+              alt="	Yury Pryhara photo">
+          </div>
+          <div class="person-description">
+            <div class="description">
+              <h3 class="description__header">Yury Pryhara</h3>
+              <p class="description__text">
+                skif-cezar ---- Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum tellus
+                dolor id
+                lorem.
+              </p>
+            </div>
+          </div>
+          <div class="social social_about">
+            <a href="https://github.com/skif-cezar" class="social__item github "></a>
+            <a href="#" class="social__item google"></a>
+            <a href="#" class="social__item twitter"></a>
+            <a href="#" class="social__item linkedin"></a>
+          </div>
+        </div>
+        <div class="person">
+          <div class="person__photo">
+            <img
+              src="https://avatars2.githubusercontent.com/u/60606326?s=400&u=cb0f7cfde35d5bbdee51c58e99108f6c8e5ef587&v=4"
+              alt="Vitali Vysotski photo">
+          </div>
+          <div class="person-description">
+            <div class="description">
+              <h3 class="description__header">Vitali Vysotski</h3>
+              <p class="description__text">
+                vitali30 ---Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut,
+                ultrices velit.
+              </p>
+            </div>
+          </div>
+          <div class="social social_about">
+            <a href="https://github.com/vitali30" class="social__item github"></a>
+            <a href="#" class="social__item google"></a>
+            <a href="#" class="social__item twitter"></a>
+            <a href="#" class="social__item linkedin"></a>
+          </div>
+        </div>
+        <div class="person">
+          <div class="person__photo">
+            <img
+              src="https://avatars2.githubusercontent.com/u/60602824?s=460&u=6cdcedc62f02feacfc3c66b5a2abf6412767f414&v=4"
+              alt="Dzmitry Leshyk photo">
+          </div>
+          <div class="person-description">
+            <div class="description">
+              <h3 class="description__header">Dzmitry Leshyk</h3>
+              <p class="description__text">
+                dmitryip ---- Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis.
+                Quisque condimentum.
+              </p>
+            </div>
+          </div>
+          <div class="social social_about">
+            <a href="https://github.com/dmitryip" class="social__item github"></a>
+            <a href="#" class="social__item google"></a>
+            <a href="#" class="social__item twitter"></a>
+            <a href="#" class="social__item linkedin"></a>
+          </div>
+        </div>
+      </div>
 
-    </div>
-
+    </section>
 
   </main>
   <footer class="footer">
