--- a/src/pages/promo.html
+++ b/src/pages/promo.html
@@ -12,13 +12,16 @@
   <header class="header">
   </header>
   <main class="main">
-    <div>
+    <div class="promo-container">
     <section class="speakit-game">
       <div class="speakit-game__image-block">
-        <img src="../assets/images/speakit-promo.jpg" 
+        <img src="https://i.imgur.com/R7ieUY3.png" 
         alt="SpeakIt game">
       </div>
       <div class="speakit-game__content">
+        <div class="header-line">
+          <img src="https://i.imgur.com/9xcWgtc.png" alt="header-line">
+        </div>
         <h1>SpeakIt game</h1>
         <p>
           SpeakIt - одностраничное приложение, при помощи которого можно прослушать произношение 
@@ -41,14 +44,20 @@
           при клике по слову звучит его произношение, выводятся соответствующие данному слову картинка и перевод.
         </p>
       </div>
+      <div class="line">
+        <img src="https://i.imgur.com/naF7d2h.png" alt="line">
+      </div>
     </section>
 
     <section class="english-puzzle-game">
       <div class="english-puzzle-game__image-block">
-        <img src="https://cdn2.unrealengine.com/fortnite-battle-pass-season-3-outfits-2536x1440-242752324.png" 
+        <img src="https://i.imgur.com/iutIhHT.png" 
         alt="English puzzle game">
       </div>
       <div class="english-puzzle-game__content">
+        <div class="header-line">
+          <img src="https://i.imgur.com/9xcWgtc.png" alt="header-line">
+        </div>
         <h1>English puzzle</h1>
         <p>
           English-puzzle - мини-игра, цель которой собрать предложения из размещённых в 
@@ -66,14 +75,20 @@
           когда все десять предложений собраны, фоновый рисунок карточек со словами образует картину.
         </p>
       </div>
+      <div class="line">
+        <img src="https://i.imgur.com/naF7d2h.png" alt="line">
+      </div>
     </section>
 
     <section class="savannah-game">
       <div class="savannah-game__image-block">
-        <img src="https://cdn2.unrealengine.com/fortnite-battle-pass-season-3-outfits-2536x1440-242752324.png" 
+        <img src="https://i.imgur.com/nVBdEUU.png" 
         alt="Savannah game">
       </div>
       <div class="savannah-game__content">
+        <div class="header-line">
+          <img src="https://i.imgur.com/9xcWgtc.png" alt="header-line">
+        </div>
         <h1>Саванна</h1>
         <p>
           Саванна - мини-игра, цель которой выбрать верный вариант перевода английского слова.
@@ -82,14 +97,20 @@
           Чем больше правильных ответов, тем больше становится кристалл, который показывает успех в изучении слов.
         </p>
       </div>
+      <div class="line">
+        <img src="https://i.imgur.com/naF7d2h.png" alt="line">
+      </div>
     </section>
 
     <section class="audiocall-game">
       <div class="audiocall-game__image-block">
-        <img src="https://cdn2.unrealengine.com/fortnite-battle-pass-season-3-outfits-2536x1440-242752324.png" 
+        <img src="https://i.imgur.com/e6Q3EOu.png" 
         alt="Audiocall game">
       </div>
       <div class="audiocall-game__content">
+        <div class="header-line">
+          <img src="https://i.imgur.com/9xcWgtc.png" alt="header-line">
+        </div>
         <h1>Аудиовызов</h1>
         <p>
           Аудиовызов - мини-игра, в которой развивается понимание на слух английских слов.
@@ -105,14 +126,20 @@
           так и нажатием клавиши Enter
         </p>
       </div>
+      <div class="line">
+        <img src="https://i.imgur.com/naF7d2h.png" alt="line">
+      </div>
     </section>
 
     <section class="sprint-game">
       <div class="sprint-game__image-block">
-        <img src="https://cdn2.unrealengine.com/fortnite-battle-pass-season-3-outfits-2536x1440-242752324.png" 
-        alt="Audiocall game">
+        <img src="https://i.imgur.com/EErCljh.png" 
+        alt="Sprint game">
       </div>
       <div class="sprint-game__content">
+        <div class="header-line">
+          <img src="https://i.imgur.com/9xcWgtc.png" alt="header-line">
+        </div>
         <h1>Спринт</h1>
         <p>
           В ходе игры появляется слово на английском языке и перевод,
@@ -127,14 +154,20 @@
           начисляется только 10 баллов.
         </p>
       </div>
+      <div class="line">
+        <img src="https://i.imgur.com/naF7d2h.png" alt="line">
+      </div>
     </section>
 
     <section class="findWord-game">
       <div class="findWord-game__image-block">
-        <img src="https://cdn2.unrealengine.com/fortnite-battle-pass-season-3-outfits-2536x1440-242752324.png" 
+        <img src="https://i.imgur.com/axwREtI.png" 
         alt="Find the word game">
       </div>
       <div class="findWord-game__content">
+        <div class="header-line">
+          <img src="https://i.imgur.com/9xcWgtc.png" alt="header-line">
+        </div>
         <h1>Найди слово</h1>
         <p>
           Игра "Найди слово" - это приложение, при помощи которого можно не только
@@ -158,6 +191,9 @@
           снимается одна "жизнь". Игра продолжается до тех пор, пока все слова не будут 
           найдены или не останется  "жизней".
         </p>
+      </div>
+      <div class="line">
+        <img src="https://i.imgur.com/naF7d2h.png" alt="line">
       </div>
     </section>
     </div>
