--- a/src/pages/main.html
+++ b/src/pages/main.html
@@ -31,7 +31,7 @@
 
   <footer class="footer">
   </footer>
-
+  <script type="text/javascript" src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
 </body>
 
 </html>
