feat: add team description

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -12,149 +12,145 @@
   </header>
   <main class="main">
     <section class="about-us">
-      <h2 class="about-us__header">About Us</h2>
+      <h2 class="about-us__header">About Team</h2>
       <p class="about-us__text">
-        Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum.
-        Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget
-        lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo,
-        tortor mauris condimentum nibh.
+        In 11.06.2020 we started our project RS Lang – an application for learning foreign words with interval
+        repetition techniques. Since this time we became a real development team. We are different people with different
+        experience from different places, but with common aim: to become a programmers. Here we are.
       </p>
       <div class="about-us__cards-block">
         <div class="person">
           <div class="person__photo">
-            <img
-              src="https://avatars0.githubusercontent.com/u/53048981?s=400&u=129e1991f4c44171eb9e841a2f733af2f36510f4&v=4"
-              alt="Vladislav Maltsev photo">
+            <img src="/src/assets/images/photo/nordost88.jpg" alt="Vladislav Maltsev photo">
           </div>
           <div class="person-description">
             <div class="description">
               <h3 class="description__header">Vladislav Maltsev</h3>
               <p class="description__text">
-                nordost88 ----Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum tellus
-                dolor id
-                lorem.
+                System administrator with 10 years experience. Now decided to change his career. Main goal is to
+                improve web-development skills.<br>
+                I this project in this project is responsible for mini-game "English puzzle" and vocabulary.
               </p>
             </div>
           </div>
           <div class="social social_about">
-            <a href="https://github.com/NordOst88" class="social__item github"></a>
-            <a href="#" class="social__item google"></a>
-            <a href="#" class="social__item twitter"></a>
-            <a href="#" class="social__item linkedin"></a>
+            <a href="https://github.com/NordOst88" class="social__item github"><span
+                class="github-name">nordost88</span></a>
           </div>
         </div>
         <div class="person">
           <div class="person__photo">
-            <img
-              src="https://avatars1.githubusercontent.com/u/60438490?s=400&u=a7784a14339972e88dbea6fd77c49193cbd4a112&v=4"
-              alt="Anastasiya Sych photo">
+            <img src="/src/assets/images/photo/staceysych.jpg" alt="Anastasiya Sych photo">
           </div>
           <div class="person-description">
             <div class="description">
               <h3 class="description__header">Anastasiya Sych</h3>
               <p class="description__text">
-                staceysych ---- Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus
-                ut,
-                ultrices velit.
+                Very optimistic person, who is really open to new experience and has passion for education and learning
+                something new. Worked as a teacher at Minsk State
+                Linguistic University.<br>
+                Here she is a creator of mini-games "Savannah" and "Find word".
               </p>
             </div>
           </div>
           <div class="social social_about">
-            <a href="https://github.com/staceysych" class="social__item github"></a>
-            <a href="#" class="social__item google"></a>
-            <a href="#" class="social__item twitter"></a>
-            <a href="#" class="social__item linkedin"></a>
+            <a href="https://github.com/staceysych" class="social__item github"><span
+                class="github-name">staceysych</span></a>
           </div>
         </div>
         <div class="person">
           <div class="person__photo">
-            <img src="https://avatars1.githubusercontent.com/u/43119686?s=400&v=4" alt="Siarhei Tsialeha photo">
+            <img src="/src/assets/images/photo/zzvipz.jpg" alt="Siarhei Tsialeha photo">
           </div>
           <div class="person-description">
             <div class="description">
               <h3 class="description__header">Siarhei Tsialeha</h3>
               <p class="description__text">
-                zzvipz ----Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis.
-                Quisque condimentum.
+                Team leader. <br>
+                Worked in IT department of the Ministry of Internal Affair of the Republic of Belarus. Set a goal to
+                learn English and become a programmer.<br>
+                Creator of base project structure. Also developed main part of this application.
               </p>
             </div>
           </div>
           <div class="social social_about">
-            <a href="https://github.com/zzvipz" class="social__item github"></a>
-            <a href="#" class="social__item google"></a>
-            <a href="#" class="social__item twitter"></a>
-            <a href="#" class="social__item linkedin"></a>
+            <a href="https://github.com/zzvipz" class="social__item github"><span class="github-name">zzvipz</span></a>
           </div>
         </div>
         <div class="person">
           <div class="person__photo">
-            <img
-              src="https://avatars3.githubusercontent.com/u/33913952?s=400&u=b70903813447a13475ceb645b96c27b841caafc4&v=4"
-              alt="	Yury Pryhara photo">
+            <img src="/src/assets/images/photo/skif-cezar.jpg" alt="	Yury Pryhara photo">
           </div>
           <div class="person-description">
             <div class="description">
               <h3 class="description__header">Yury Pryhara</h3>
               <p class="description__text">
-                skif-cezar ---- Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum tellus
-                dolor id
-                lorem.
-              </p>
+                Recently graduated from Belarusian State University of Infirmatics and Radioelectrinics. Was always
+                interested in programming. Fond of sport.<br>
+                Developer of mini-game "Audiocall" and promo-page.</p>
             </div>
           </div>
           <div class="social social_about">
-            <a href="https://github.com/skif-cezar" class="social__item github "></a>
-            <a href="#" class="social__item google"></a>
-            <a href="#" class="social__item twitter"></a>
-            <a href="#" class="social__item linkedin"></a>
+            <a href="https://github.com/skif-cezar" class="social__item github"><span
+                class="github-name">skif-cezar</span></a>
           </div>
         </div>
         <div class="person">
           <div class="person__photo">
-            <img
-              src="https://avatars2.githubusercontent.com/u/60606326?s=400&u=cb0f7cfde35d5bbdee51c58e99108f6c8e5ef587&v=4"
-              alt="Vitali Vysotski photo">
+            <img src="/src/assets/images/photo/vitali30.jpg" alt="Vitali Vysotski photo">
           </div>
           <div class="person-description">
             <div class="description">
               <h3 class="description__header">Vitali Vysotski</h3>
               <p class="description__text">
-                vitali30 ---Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut,
-                ultrices velit.
+                His target is to become a successful person. Served 13 years in the army, so hi is ready to set
+                any goals for himself and achieve them at any cost.<br>
+                In this project he created mini-game "SpeakIt" and statistics page.
               </p>
             </div>
           </div>
           <div class="social social_about">
-            <a href="https://github.com/vitali30" class="social__item github"></a>
-            <a href="#" class="social__item google"></a>
-            <a href="#" class="social__item twitter"></a>
-            <a href="#" class="social__item linkedin"></a>
+            <a href="https://github.com/vitali30" class="social__item github"><span
+                class="github-name">vitali30</span></a>
           </div>
         </div>
         <div class="person">
           <div class="person__photo">
-            <img
-              src="https://avatars2.githubusercontent.com/u/60602824?s=460&u=6cdcedc62f02feacfc3c66b5a2abf6412767f414&v=4"
-              alt="Dzmitry Leshyk photo">
+            <img src="/src/assets/images/photo/dmitryip.jpg" alt="Dzmitry Leshyk photo">
           </div>
           <div class="person-description">
             <div class="description">
               <h3 class="description__header">Dzmitry Leshyk</h3>
               <p class="description__text">
-                dmitryip ---- Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis.
-                Quisque condimentum.
+                Worked in bank for a long time. Once he decided to change his career.<br>
+                For this project he developed mini-game "Sprint" and page about team.
               </p>
             </div>
           </div>
           <div class="social social_about">
-            <a href="https://github.com/dmitryip" class="social__item github"></a>
-            <a href="#" class="social__item google"></a>
-            <a href="#" class="social__item twitter"></a>
-            <a href="#" class="social__item linkedin"></a>
+            <a href="https://github.com/dmitryip" class="social__item"><span class="github-name">dmitryip</span></a>
+
+          </div>
+        </div>
+        <div class="person">
+          <div class="person__photo">
+            <img src="/src/assets/images/photo/ikindby.jpg" alt="Aliaksandr Filitaryn photo">
+          </div>
+          <div class="person-description">
+            <div class="description">
+              <h3 class="description__header">Aliaksandr Filitaryn</h3>
+              <p class="description__text">
+                Project mentor. <br>
+                The person who graduated from the RS School a few years ago and now help us in this project.
+              </p>
+            </div>
+          </div>
+          <div class="social social_about">
+            <a href="https://github.com/ikindiby" class="social__item github"><span
+                class="github-name">ikindiby</span></a>
           </div>
         </div>
       </div>
-
     </section>
 
   </main>
