feat: add font, change basic style

--- a/index.html
+++ b/index.html
@@ -10,15 +10,17 @@
 <body>
 
   <header class="header">
-    <div class="wrapper">
-      <a class="link" href="./pages/promo.html">
+    <div class="header__container wrapper">
+      <a class="header__title link" href="./pages/promo.html">
         <div class="logo"></div>
+        <p class="header__title">RSLang</p>
       </a>
     </div>
   </header>
   <main class="main">
     <div class="title__wrapper">
       <h1 class="title">RS<span>Lang</span></h1>
+      <p class="title__subtitle">Learning English in a funny way with us!</p>
     </div>
     <form class="form">
       <input class="user-name" type="text" placeholder="Name (Required)" required autofocus>
@@ -37,7 +39,7 @@
     <div class="wrapper">
       <div class="contacts">
         <a class="link" href="./pages/about.html">
-          <img src="./src/assets/svg/social-media.svg" alt="Telegram" />
+          <img src="./src/assets/svg/team.svg" alt="Team-36" />
           Team-36
         </a>
       </div>
