--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -59,6 +59,7 @@
           </div>
           <div class="social social_about">
             <a href="https://github.com/staceysych" class="social__item social__item_github"></a>
+            <a href="https://telegram.me/staceysych" class="social__item social__item_telegram"></a>
           </div>
         </div>
         <div class="person">
@@ -113,10 +114,10 @@
             <div class="description">
               <h3 class="description__header">Vitali Vysotski</h3>
               <p class="description__text">
-                His target is to become a successful person. Served 13 years in the army, so hi is ready to set
-                any goals for himself and achieve them at any cost. </p>
+                His goal is becoming a successful person. Since he served 13 years in the army, he's a self-motivated
+                person, who sets goals and works as hard as possible to achieve them. </p>
               <p class="description__text">
-                In this project he created mini-game "SpeakIt" and statistics page.
+                In this project he developed a mini-game "SpeakIt" and a statistics page.
               </p>
             </div>
           </div>
