--- a/src/pages/promo.html
+++ b/src/pages/promo.html
@@ -13,12 +13,12 @@
   </header>
   <main class="main">
     <div class="promo-container">
-      <div class="promo-container__speakit">
-        <img class="speakit__image" src="https://i.imgur.com/R7ieUY3.png" 
+      <div class="promo-container__game">
+        <img class="promo-container__image" src="https://i.imgur.com/R7ieUY3.png" 
         alt="SpeakIt">
-        <div class="speakit__content">
-          <h2 class="speakit__title">Speakit</h2>
-          <div class="speakit__description">
+        <div class="promo-container__content">
+          <h2 class="promo-container__title">Speakit</h2>
+          <div class="promo-container__description">
             <p>
               SpeakIt - одностраничное приложение, при помощи которого можно прослушать произношение 
               английских слов и использовать технологию распознавания речи Google Web Speech API 
@@ -37,12 +37,12 @@
         </div>
       </div>
 
-      <div class="promo-container__english-puzzle">
-        <img class="english-puzzle__image" src="https://i.imgur.com/iutIhHT.png" 
+      <div class="promo-container__game">
+        <img class="promo-container__image" src="https://i.imgur.com/iutIhHT.png" 
         alt="English puzzle">
-        <div class="english-puzzle__content">
-          <h2 class="english-puzzle__title">English puzzle</h2>
-          <div class="english-puzzle__description">
+        <div class="promo-container__content">
+          <h2 class="promo-container__title">English puzzle</h2>
+          <div class="promo-container__description">
             <p>
               English-puzzle - мини-игра, цель которой собрать предложения из размещённых в 
               случайном порядке английских слов.
@@ -62,12 +62,12 @@
         </div>
       </div>
 
-      <div class="promo-container__savannah">
-        <img class="savannah__image" src="https://i.imgur.com/nVBdEUU.png" 
+      <div class="promo-container__game">
+        <img class="promo-container__image" src="https://i.imgur.com/nVBdEUU.png" 
         alt="Savannah">
-        <div class="savannah__content">
-          <h2 class="savannah__title">Саванна</h2>
-          <div class="savannah__description">
+        <div class="promo-container__content">
+          <h2 class="promo-container__title">Саванна</h2>
+          <div class="promo-container__description">
             <p>
               Саванна - мини-игра, цель которой выбрать верный вариант перевода английского слова.
             </p>
@@ -78,12 +78,12 @@
         </div>
       </div>
 
-      <div class="promo-container__audiocall">
-        <img class="audiocall__image" src="https://i.imgur.com/e6Q3EOu.png" 
+      <div class="promo-container__game">
+        <img class="promo-container__image" src="https://i.imgur.com/e6Q3EOu.png" 
         alt="Audiocall">
-        <div class="audiocall__content">
-          <h2 class="audiocall__title">Аудиовызов</h2>
-          <div class="audiocall__description">
+        <div class="promo-container__content">
+          <h2 class="promo-container__title">Аудиовызов</h2>
+          <div class="promo-container__description">
             <p>
               Аудиовызов - мини-игра, в которой развивается понимание на слух английских слов.
             </p>
@@ -101,12 +101,12 @@
         </div>
       </div>
 
-      <div class="promo-container__sprint">
-        <img class="sprint__image" src="https://i.imgur.com/EErCljh.png" 
+      <div class="promo-container__game">
+        <img class="promo-container__image" src="https://i.imgur.com/EErCljh.png" 
         alt="Sprint">
-        <div class="sprint__content">
-          <h2 class="sprint__title">Спринт</h2>
-          <div class="sprint__description">
+        <div class="promo-container__content">
+          <h2 class="promo-container__title">Спринт</h2>
+          <div class="promo-container__description">
             <p>
               В ходе игры появляется слово на английском языке и перевод,
               нужно указать принадлежит ли данный перевод этому слову.
@@ -123,12 +123,12 @@
         </div>
       </div>
 
-      <div class="promo-container__find-word">
-        <img class="find-word__image" src="https://i.imgur.com/axwREtI.png"" 
+      <div class="promo-container__game">
+        <img class="promo-container__image" src="https://i.imgur.com/axwREtI.png"" 
         alt="Find word">
-        <div class="find-word__content">
-          <h2 class="find-word__title">Найди слово</h2>
-          <div class="find-word__description">
+        <div class="promo-container__content">
+          <h2 class="promo-container__title">Найди слово</h2>
+          <div class="promo-container__description">
             <p>
               Игра "Найди слово" - это приложение, при помощи которого можно не только
               запоминать написания слов, но и тренировать внимательность. 
