feat: change source image

--- a/src/pages/promo.html
+++ b/src/pages/promo.html
@@ -14,7 +14,7 @@
   <main class="main">
     <div class="promo-container">
       <div class="promo-container__game">
-        <img class="promo-container__image" src="https://i.imgur.com/R7ieUY3.png" 
+        <img class="promo-container__image" src="/src/assets/images/speakit-promo.png" 
         alt="SpeakIt">
         <div class="promo-container__content">
           <h2 class="promo-container__title">Speakit</h2>
@@ -38,7 +38,7 @@
       </div>
 
       <div class="promo-container__game">
-        <img class="promo-container__image" src="https://i.imgur.com/iutIhHT.png" 
+        <img class="promo-container__image" src="/src/assets/images/english-puzzle-promo.png" 
         alt="English puzzle">
         <div class="promo-container__content">
           <h2 class="promo-container__title">English puzzle</h2>
@@ -63,7 +63,7 @@
       </div>
 
       <div class="promo-container__game">
-        <img class="promo-container__image" src="https://i.imgur.com/nVBdEUU.png" 
+        <img class="promo-container__image" src="/src/assets/images/savannah-promo.png" 
         alt="Savannah">
         <div class="promo-container__content">
           <h2 class="promo-container__title">Саванна</h2>
@@ -79,7 +79,7 @@
       </div>
 
       <div class="promo-container__game">
-        <img class="promo-container__image" src="https://i.imgur.com/e6Q3EOu.png" 
+        <img class="promo-container__image" src="/src/assets/images/audiocall-promo.png" 
         alt="Audiocall">
         <div class="promo-container__content">
           <h2 class="promo-container__title">Аудиовызов</h2>
@@ -102,7 +102,7 @@
       </div>
 
       <div class="promo-container__game">
-        <img class="promo-container__image" src="https://i.imgur.com/EErCljh.png" 
+        <img class="promo-container__image" src="/src/assets/images/sprint-promo.png" 
         alt="Sprint">
         <div class="promo-container__content">
           <h2 class="promo-container__title">Спринт</h2>
@@ -124,7 +124,7 @@
       </div>
 
       <div class="promo-container__game">
-        <img class="promo-container__image" src="https://i.imgur.com/axwREtI.png"" 
+        <img class="promo-container__image" src="/src/assets/images/finde-words-promo.png"
         alt="Find word">
         <div class="promo-container__content">
           <h2 class="promo-container__title">Найди слово</h2>
