add contact for Vlad

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -32,13 +32,14 @@
                 goal is improving web-development skills. </p>
               <p class="description__text">
                 During this project he was responsible for a mini-game
-                "English puzzle" and Vocabulary.
+                "English puzzle", statistics and vocabulary.
               </p>
             </div>
           </div>
           <div class="social social_about">
             <a href="https://github.com/NordOst88" class="social__item social__item_github"></a>
-            <a href="mailto:drou@inbox.ru" class="social__item mail"></a>
+            <a href="mailto:drou@inbox.ru" class="social__item social__item_mail"></a>
+            <a href="https://telegram.me/nordost8888" class="social__item social__item_telegram"></a>
           </div>
         </div>
         <div class="person">
