feat: add video

--- a/src/pages/promo.html
+++ b/src/pages/promo.html
@@ -23,6 +23,12 @@
               индивидуального прогресса и мини-играми.
             </p>
           </div>
+          <div class="promo-container__video">
+            <div class="thumb-wrap">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/5UvA9lKiFak"  
+              frameborder="0" allowfullscreen></iframe>
+            </div>
+          </div>
         </div>
         <div class="promo-container__content features">
           <h2 class="promo-container__title white-color">Особенности приложения</h2>
