fix: fix bug with word statistic and setting modal

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <main class="main">
     <div class="title__wrapper">
       <h1 class="title">RS<span>Lang</span></h1>
-      <p class="title__subtitle">Learning English with us in a funny way!</p>
+      <p class="title__subtitle">Learn English with us in a funny way!</p>
     </div>
     <form class="form">
       <input class="user-name" type="text" placeholder="Name (Required)" required autofocus>
