--- a/src/pages/promo.html
+++ b/src/pages/promo.html
@@ -54,39 +54,29 @@
             </p>
             <img class="promo-container__image screen" src="/src/assets/images/authorization-promo.png"
               alt="Authorization">
-            <p>Чтобы получить доступ к тренировкам и отслеживать прогресс, вам нужно зарегистрироваться. Делается это
-              просто. Нажимаете на кнопку Sign up, заполняете свое имя, email, пароль и вот вы уже зарегистрированный
+            <p>Чтобы получить доступ к тренировкам и отслеживать прогресс, вам нужно зарегистрироваться. Нажимаете на
+              кнопку Sign up, заполняете свое имя, email, пароль и вот вы уже зарегистрированный
               пользователь и можете приступать к тренировке.
-              Вы всегда можете покинуть приложение нажать на кнопку «Выйти» в верхнем правом углу экрана.
               При повторном входе вам нужно будет ввести свои данные и нажать кнопку Log In.
-              И кстати, не удивляйтесь почему большая часть приложения на английском, ведь я уже сказала английский –
+              И кстати, не удивляйтесь почему большая часть приложения на английском, ведь английский –
               это образ жизни. Вам нужно как можно быстрее в него погрузиться.
             </p>
             <p>
               – Главная страница приложения
             </p>
             <img class="promo-container__image screen" src="/src/assets/images/main-promo.png" alt="Main">
-            <p>На главной странице вы видите краткую информации о вашей ежедневой цели и достижениях. (Сколько карточек
-              уже пройдено, сколько слов изучено, ваш прогресс). В конце каждой тренировки достижения будут меняться,
-              так что следите внимательно, чтобы порадоваться своим успехам.</p>
+            <p>На главной странице вы видите краткую информации о вашей ежедневой цели и достижениях. В конце каждой
+              тренировки достижения будут меняться, так что следите внимательно, чтобы порадоваться своим успехам.</p>
             </p>
             <p>
               – Настройки приложения
             </p>
             <img class="promo-container__image screen" src="/src/assets/images/settings-promo.png" alt="Main">
-            <p>Вы всегда можете обратиться к настройкам пользователя в верхнем правом углу экрана, рядом с кнопкой
-              выйти. Настройки включают в себя три блока: «базовые настройки», которые доступны до старта тренировки и
+            <p>Настройки включают в себя три блока: «базовые настройки», которые доступны до старта тренировки и
               позволяют вам определить общее количество карточек, которые вы хотите изучить за
-              день, количество новых слов в день, а также способ изучения (например, только новые слова, слова из
-              категории “сложные”,
-              повторить ранее изученные слова или выбрать режим – Микс, где вам будут предложены как новые слова, так и
-              слова на повторение, исходя из ваших настроек).<br>
-              «Дополнительные настройки» – которые доступны в любой момет и позволяют настроить информацию, которая
-              будет отображаться на карточках - перевод слова, предложение с объяснением значения слова, предложение с
-              примером использования изучаемого слова, выбираете, показывать ли на карточке транскрипцию слова,
-              картинку-ассоциацию к изучаемому слову, отображать ли кнопки, которые дают возможность помещать слова в
-              ваш словарь и управлять процессом обучения, вопроизводить ли аудио по текущей карточке, автоматически
-              показывать следующую карточку при вашем правильном ответе.<br>
+              день, количество новых слов в день, а также способ изучения.<br>
+              «Дополнительные настройки» – позволяют настроить информацию, которая будет отображаться на карточках.
+              <br>
               И третий блок – это «Настройки словаря», которые отвечают за отображение информации в вашем словаре.
             </p>
             <p>
@@ -100,9 +90,7 @@
               предложений с объяснением слова и с примером использования слова, если они выбраны в настройках.<br>
               • Если слово набрано без ошибок, происходит переход к следующей карточке с новым словом.<br>
               • Если слово было набрано с ошибками, в окне для ввода слова отображается изучаемое слово, в котором
-              совпадающие буквы подсвечиваются зелёным, а несовпадающие красным или оранжевым цветом, в зависимости от
-              количества ошибок. Затем изучаемое слово становится полупрозрачным, когда снова начинаем вводить ответ,
-              изучаемое слово исчезает с поля ввода.<br>
+              совпадающие буквы подсвечиваются зелёным, а несовпадающие красным или оранжевым цветом.<br>
               Переходить к следующей карточке можно и не набирая изучаемое слово, просто нажимая на кнопки «I know» или
               «Show answer» под словом. В первом случае ваше слово будет помещенго в категорию ваших слов, которые вы
               знаете и не хотите повторно изучать, а во втором вам будет предложено на последующих тренировках три раза
@@ -110,12 +98,12 @@
               изученных слов. Наличие этих и других кнопок на странице регулируется настройками приложения.<br>
               Слово можно поместить в группу «Difficult word». Помещённые в эту группу слова можно изучать отдельно от
               остальных, если выбрать в настройках режим изучения: «Difficult». Сложные слова сохраняются на отдельной
-              вкладке на странице «Dictionary», которую мы рассмотрим позже.</p>
+              вкладке на странице «Dictionary», которую мы рассмотрим ниже.</p>
             <img class="promo-container__image screen" src="/src/assets/images/training2-promo.png" alt="Statistics">
             <p>
-              Под каждым словом после того, как оно угадано и активизирована настройка «Show additional control
+              Под каждым словом, после того, как оно угадано и активизирована настройка «Show additional control
               buttons», появляются кнопки Repeat again, Difficult, Normal, Easy.
-              Если при изучении слова была допущена ошибка, или пользователь нажал на кнопку Repeat again, карточка с
+              Если при изучении слова была допущена ошибка, или нажата кнопка Repeat again, карточка с
               этим словом вновь появится для изучения как на текущей тренировке, так и на последующих до тех пор, пока
               пользователь правильно не оперделит слово три раза подряд. В этом заключается идея интервального
               повторения.</p>
@@ -151,9 +139,9 @@
             <img class="promo-container__image screen" src="/src/assets/images/dictionary-promo.png" alt="Dictionary">
             <p>
             <p>На странице Словарь (Dictionary) есть список изучаемых слов с примером звучания слов, транскрипцией и
-              переводом. А также кнопками для управления словарем и более подробной информации о слове (если
-              соответсвующие настройки активизированы в профиле пользователя). Возле каждого изучаемого слова
-              указывается прогресс изучения, сколько раз это слово повторялось, когда повторялось в последний раз, и
+              переводом. А также кнопками для управления словарем и более подробной информации о слове.
+              Возле каждого изучаемого слова указывается прогресс изучения, сколько раз это слово повторялось, когда
+              повторялось в последний раз, и
               когда будет повторяться снова.<br>
               Слово можно исключить из изучения, нажав на кнопку Удалить. Удалённые слова сохраняются во
               вкладке Removed, где их можно просмотреть. Возле каждого удалённого слова есть кнопка Восстановить,
